--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,41 @@
-# The URL the site will be built for
-base_url = "https://www.icetigergeo.com"
-
-# Whether to automatically compile all Sass files in the sass directory
+title = "Anatole"
+description = "A other zola theme"
+base_url = "https://icetigergeo.com"
 compile_sass = true
-
-# Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
-
-[markdown]
-# Whether to do syntax highlighting
-# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
+build_search_index = false
+generate_feed = true
+highlight_theme = "base16-ocean-light"
+output_dir = "docs"
+theme = "anatole-zola"
 
-[extra]
-# Put all your custom variables here
+default_language = "en"
+
+taxonomies = [
+    {name = "tags"},
+]
+
+[languages.en.translations]
+about = "About"
+home = "Home"
+tags = "Tags"
+archive = "Archive"
+links = "Links"
+date_format = "%Y-%m-%d"
+next_page = "Next Page"
+last_page = "Last Page"
+
+[extra.social]
+github = ""
+twitter = "w"
+facebook = ""
+instagram = "r"
+dribbble = "t"
+weibo = "y"
+linkedin = ""
+flickr = ""
+
+[extra.show]
+tags = false
+links = false
+
