Updated social media links

--- a/config.toml
+++ b/config.toml
@@ -26,13 +26,13 @@ next_page = "Next Page"
 last_page = "Last Page"
 
 [extra.social]
-github = ""
+github = "Icetigergeo"
 twitter = "w"
 facebook = ""
 instagram = "r"
 dribbble = "t"
 weibo = "y"
-linkedin = ""
+linkedin = "geo-bean-62b57b239"
 flickr = ""
 
 [extra.show]
